
  [ Pino Toscano ]
  * Add -Wl,--no-relax to the LDFLAGS on alpha. (Closes: #656056)
  * Update the symbols file for alpha, armhf and ppc64, and for all the other
    archs from their build logs. (Closes: #653905, #656056, #664897)

  [ Felix Geyer ]
  * Add Fix_build_with_GLib_2.31_changeset_r97269.patch, cherry-picked from
    upstream. (Closes: #665679)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 16 Jan 2012 10:29:18 +0100

qtwebkit (2.2.0-3) unstable; urgency=low

  [ Fathi Boudra ]
  * Update the symbols file for ia64 and mipsel architectures.

  [ Pino Toscano ]
  * Add patch hurd.diff to temporarly workaround build failure on Hurd.
  * Update the symbols file for hurd-i386, sh4, and sparc64 architectures.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 28 Dec 2011 10:10:59 +0200

qtwebkit (2.2.0-2) unstable; urgency=low

  [ Pino Toscano ]
  * Improve the symbols file for more archs (based on their build logs):
    armel ia64 kfreebsd-amd64 kfreebsd-i386 mips powerpc s390 s390x sparc

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sun, 25 Dec 2011 21:46:36 +0100

qtwebkit (2.2.0-1) unstable; urgency=low

  * New upstream release:
    - provides support for s390/s390x. (Closes: #637004)
  * Update patches:
    - 0001_fix_symbols_visibility_for_webcore.diff: drop, stolen upstream.
    - 05_sparc_unaligned_access.diff: refresh
    - no_gc_sections.diff: refresh
    - 06_kfreebsd_strnstr.diff, 09_hurd.diff: drop, now strnstr() is properly
      enabled

  [ Pino Toscano ]
  * Add -gstabs to the C(XX)FLAGS also for s390x. (see #637004)
  * Enable the video support for all the OSes, not just on Linux.
  * Add patch glibc_mkspec.diff, to enable/fix compile options for platforms
    using our custom glibc-g++ mkspec.
  * Add a symbols file, based on the previous version (2.1.0~2011week13).

  [ Fathi Boudra ]
  * Update debian/control:
    - bump debhelper build dependency to 8.1.3~.