@@ -2,7 +2,7 @@ Source: qtwebkit
 Priority: optional
 Maintainer: Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>
 Uploaders: Fathi Boudra <fabo@debian.org>
-Build-Depends: debhelper (>= 8.1.3~),
+Build-Depends: debhelper (>= 9),
                gperf,
                libgstreamer-plugins-base0.10-dev,
                libgstreamer0.10-dev,
