@@ -8,6 +8,9 @@ qtwebkit (2.2.0-4) UNRELEASED; urgency=low
   [ Felix Geyer ]
   * Add Fix_build_with_GLib_2.31_changeset_r97269.patch, cherry-picked from
     upstream. (Closes: #665679)
+  * Bump debhelper compat level to v9.
+    - Use DEB_<flag>_MAINT variables instead of manipulating the flag variables
+      directly.
 
  -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Mon, 16 Jan 2012 10:29:18 +0100
 
